The project after addingContact Us Page

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <!doctype html>
 <html>
 <head>
-<title>Train tickets Here</title>
+<title>Train Station:Home Page </title>
 
 </head>
 <body>
 /*create the following files and save them inside the folder index.html, buy.html and pay.html
 */
 
-<h1> Welcome to Train station Home Page</h1>
-
+<h1> Welcome to Train station- Home Page</h1>
+<h1>The prices of the tickets have been reviewed</h1>
+<h4>Subsidy is gone</h4>
 
 </body>
 
