Fix to railways and comment line updated for html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
 </head>
 <body>
-/*create the following files and save them inside the folder index.html, buy.html and pay.html
-*/
+<!-- create the following files and save them inside the folder index.html, buy.html and pay.html
+-->
 
 <h1> Welcome to Train station- Home Page</h1>
 <h1>The prices of the tickets have been reviewed</h1>
 <h4>Subsidy is gone</h4>
-
+<p> I love railways</p>
 </body>
 
 
